fix: hide vertical scrollbars from carousel on chromium

--- a/src/components/carousel/style.css
+++ b/src/components/carousel/style.css
@@ -12,9 +12,14 @@
   min-height: 150px;
   overflow-x: scroll;
   scrollbar-width: none;
+  -ms-overflow-style: none;
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
   z-index: 1;
+}
+
+.carousel__track::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
 }
 
 .carousel__controls {
